; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_memcheck.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_memcheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @memcheck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @memcheck(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @errno, align 4
  %7 = call i32 @strerror(i32 %6)
  %8 = call i32 @memory_exhausted(i32 %7)
  br label %9

9:                                                ; preds = %5, %1
  %10 = load i8*, i8** %2, align 8
  ret i8* %10
}

declare dso_local i32 @memory_exhausted(i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
